Added localStorage. Added the ability to read to and delete it.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="performanceView.js"></script>
 </head>
 <body>
+    <div class = "storage"></div>
     <div id = "sortingView"></div>
     <div id = "performanceView"></div>
 </body>
